# Eirboard_Programmation

./: .gitignore
Eirboard/: CMakeLists.txt  Makefile
Eirboard/src/: calcul.cpp  communication.cpp  global.cpp  gp2.cpp  main.cpp  message.cpp  servo.cpp
Eirboard/src/include/: asservissement.hpp  calcul.hpp  communication.hpp  define.hpp  message.hpp  servo.hpp
